kubernetes/apps/datasci/dask/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dask-gateway
  namespace: datasci
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: internal
  rules:
    - host: dask.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dask-gateway-traefik
                port:
                  number: 80
  tls:
    - hosts:
        - dask.${SECRET_DOMAIN}
